--- a/_src/pug/pages/index.pug
+++ b/_src/pug/pages/index.pug
@@ -2,8 +2,8 @@ extends ../templates/_main.pug
 include ../helpers/mixins.pug
 
 block content
-  h1.page-main__title Информирование о поступающих оплатах
+  h1.page-main__title
 
   section.promo
     .promo__inner.container
-      h2.promo__title Наши приемущества
+      h2.promo__title
