--- a/_src/sass/helpers/_font.scss
+++ b/_src/sass/helpers/_font.scss
@@ -1,1 +1,2 @@
-@include font-load(AvenirNextCyr, Demi, 600, normal)
+// @include font-load(AvenirNextCyr, Demi, 600, normal)
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
