--- a/_src/sass/helpers/_variables.scss
+++ b/_src/sass/helpers/_variables.scss
@@ -1,6 +1,7 @@
 // colors
 $black: #000;
 $white: #fff;
+$bg: #F6F6F6;
 
 // sizes;
 $width: 1100px;
@@ -15,4 +16,7 @@ $dt: 1200px;
 $ldt: 1440px;
 
 // other;
-$text: #2d3238;
+$text-dark: #202020;
+
+// font
+// $font-family-montserrat: @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
