--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -578,4 +578,30 @@ button {
   padding-left: 40px;
   background-color: #84e91e; }
 
+.header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 56px;
+  padding-bottom: 56px; }
+
+.container--header {
+  max-width: 1656px; }
+
+.nav a.nav__link {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 26px;
+  letter-spacing: 0.05em;
+  text-align: left;
+  color: #202020;
+  padding: 17px;
+  text-transform: uppercase; }
+
 /*# sourceMappingURL=style.css.map */
