--- a/_src/pug/modules/_header.pug
+++ b/_src/pug/modules/_header.pug
@@ -1,5 +1,5 @@
 header.header#header
-  .header__inner.container
+  .header__inner.container.container--header
     a.header__logo.logo(href="/index.html")
       +img-retina(`logo`, `png`, `логотип`, `logo__img`, `238`, `36`)
 
