--- a/_src/sass/blocks/header.scss
+++ b/_src/sass/blocks/header.scss
@@ -1,14 +1,24 @@
 //
 .header {
 
-  &__inner {}
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 56px;
+    padding-bottom: 56px;
+  }
 
   &__logo {}
 
   &__nav {}
 }
 
-.container {}
+.container {
+  &--header {
+    max-width: 1656px;
+  }
+}
 
 .logo {
 
@@ -19,9 +29,17 @@
 
   &__item {}
 
-  &__link {
+  a.nav__link {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 26px;
+    letter-spacing: 0.05em;
+    text-align: left;
+    color: $text-dark;
+    padding: 17px;
+    text-transform: uppercase;
 
-    &--catalog {}
+    p &--catalog {}
   }
 
   &__list-sub {}
