--- a/_src/pug/helpers/arrays.pug
+++ b/_src/pug/helpers/arrays.pug
@@ -1,3 +1,3 @@
 - let n = 0
 - const favFolder = 'fav';
-- const catalogItems = ['ГОСТИНЫЕ', 'СПАЛЬНИ', 'ДИВАНЫ', 'ДЕТСКИЕ', 'КУХНИ', 'СТОЛЫ', 'ОБЕДЕННЫЕ', 'СТОЛЫ', 'СТУЛЬЯ', 'МАТРАСЫ', 'КРОВАТИ', 'ПРИХОЖИЕ', 'БИБЛИОТЕКИ', 'ШКАФЫ', 'ШКАФЫ-КУПЕ', 'КОМОДЫ', 'ТУМБЫ', 'КРЕСЛА', 'ЗЕРКАЛА', 'ПОЛКИ', 'КАРТИНЫ', 'РАСПРОДАЖА', 'АКЦИИ']
+- const catalogItems = ['ГОСТИНЫЕ', 'СПАЛЬНИ', 'ДИВАНЫ', 'ДЕТСКИЕ', 'КУХНИ', 'СТОЛЫ', 'ОБЕДЕННЫЕ СТОЛЫ', 'СТУЛЬЯ', 'МАТРАСЫ', 'КРОВАТИ', 'ПРИХОЖИЕ', 'БИБЛИОТЕКИ', 'ШКАФЫ', 'ШКАФЫ-КУПЕ', 'КОМОДЫ', 'ТУМБЫ', 'КРЕСЛА', 'ЗЕРКАЛА', 'ПОЛКИ', 'КАРТИНЫ', 'РАСПРОДАЖА', 'АКЦИИ']
