--- a/_src/sass/helpers/_variables.scss
+++ b/_src/sass/helpers/_variables.scss
@@ -17,6 +17,7 @@ $ldt: 1440px;
 
 // other;
 $text-dark: #202020;
+$green: #718753;
+$delay: 0.3s;
 
 // font
-// $font-family-montserrat: @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
