--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -308,6 +308,336 @@ template {
   display: none; }
 
 /*!
+ * Mmenu Light
+ * mmenujs.com/mmenu-light
+ *
+ * Copyright (c) Fred Heusschen
+ * www.frebsite.nl
+ *
+ * License: CC-BY-4.0
+ * http://creativecommons.org/licenses/by/4.0/
+ */
+:root {
+  --mm-ocd-width:80%;
+  --mm-ocd-min-width:200px;
+  --mm-ocd-max-width:440px; }
+
+body.mm-ocd-opened {
+  overflow-y: hidden;
+  -ms-scroll-chaining: none;
+  overscroll-behavior: none; }
+
+.mm-ocd {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 100%;
+  left: 0;
+  z-index: 9999;
+  overflow: hidden;
+  -ms-scroll-chaining: none;
+  overscroll-behavior: contain;
+  background: rgba(0, 0, 0, 0);
+  -webkit-transition-property: bottom,background-color;
+  -o-transition-property: bottom,background-color;
+  transition-property: bottom,background-color;
+  -webkit-transition-duration: 0s,.3s;
+  -o-transition-duration: 0s,.3s;
+  transition-duration: 0s,.3s;
+  -webkit-transition-timing-function: ease;
+  -o-transition-timing-function: ease;
+  transition-timing-function: ease;
+  -webkit-transition-delay: .45s,.15s;
+  -o-transition-delay: .45s,.15s;
+  transition-delay: .45s,.15s; }
+
+.mm-ocd--open {
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.25);
+  -webkit-transition-delay: 0s;
+  -o-transition-delay: 0s;
+  transition-delay: 0s; }
+
+.mm-ocd__content {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 2;
+  width: 80%;
+  width: var(--mm-ocd-width);
+  min-width: 200px;
+  min-width: var(--mm-ocd-min-width);
+  max-width: 440px;
+  max-width: var(--mm-ocd-max-width);
+  background: #fff;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  -o-transition-property: transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  transition-property: transform,-webkit-transform;
+  -webkit-transition-duration: .3s;
+  -o-transition-duration: .3s;
+  transition-duration: .3s;
+  -webkit-transition-timing-function: ease;
+  -o-transition-timing-function: ease;
+  transition-timing-function: ease; }
+
+.mm-ocd--left .mm-ocd__content {
+  left: 0;
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0); }
+
+.mm-ocd--right .mm-ocd__content {
+  right: 0;
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0); }
+
+.mm-ocd--open .mm-ocd__content {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+.mm-ocd__backdrop {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 3;
+  width: calc(100% - 80%);
+  width: calc(100% - var(--mm-ocd-width));
+  min-width: calc(100% - 440px);
+  min-width: calc(100% - var(--mm-ocd-max-width));
+  max-width: calc(100% - 200px);
+  max-width: calc(100% - var(--mm-ocd-min-width));
+  background: rgba(3, 2, 1, 0); }
+
+.mm-ocd--left .mm-ocd__backdrop {
+  right: 0; }
+
+.mm-ocd--right .mm-ocd__backdrop {
+  left: 0; }
+
+.mm-spn, .mm-spn a, .mm-spn li, .mm-spn span, .mm-spn ul {
+  display: block;
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+:root {
+  --mm-spn-item-height:50px;
+  --mm-spn-item-indent:20px;
+  --mm-spn-line-height:24px; }
+
+.mm-spn {
+  width: 100%;
+  height: 100%;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-overflow-scrolling: touch;
+  overflow: hidden;
+  -webkit-clip-path: inset(0 0 0 0);
+  clip-path: inset(0 0 0 0);
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0); }
+
+.mm-spn ul {
+  -webkit-overflow-scrolling: touch;
+  position: fixed;
+  top: 0;
+  left: 100%;
+  bottom: 0;
+  z-index: 2;
+  width: 130%;
+  padding-right: 30%;
+  line-height: 24px;
+  line-height: var(--mm-spn-line-height);
+  overflow: visible;
+  overflow-y: auto;
+  background: inherit;
+  -webkit-transition: left .3s ease 0s;
+  -o-transition: left .3s ease 0s;
+  transition: left .3s ease 0s;
+  cursor: default; }
+
+.mm-spn ul:after {
+  content: "";
+  display: block;
+  height: 50px;
+  height: var(--mm-spn-item-height); }
+
+.mm-spn > ul {
+  left: 0; }
+
+.mm-spn ul.mm-spn--open {
+  left: 0; }
+
+.mm-spn ul.mm-spn--parent {
+  left: -30%;
+  overflow-y: hidden; }
+
+.mm-spn li {
+  position: relative;
+  background: inherit;
+  cursor: pointer; }
+
+.mm-spn li:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 25px;
+  top: calc(var(--mm-spn-item-height)/ 2);
+  right: 25px;
+  right: calc(var(--mm-spn-item-height)/ 2);
+  z-index: 0;
+  width: 10px;
+  height: 10px;
+  border-top: 2px solid;
+  border-right: 2px solid;
+  -webkit-transform: rotate(45deg) translate(0, -50%);
+  -ms-transform: rotate(45deg) translate(0, -50%);
+  transform: rotate(45deg) translate(0, -50%);
+  opacity: .4; }
+
+.mm-spn li:after {
+  content: "";
+  display: block;
+  margin-left: 20px;
+  margin-left: var(--mm-spn-item-indent);
+  border-top: 1px solid;
+  opacity: .15; }
+
+.mm-spn a, .mm-spn span {
+  position: relative;
+  z-index: 1;
+  padding: 13px 20px;
+  padding: calc((var(--mm-spn-item-height) - var(--mm-spn-line-height))/ 2) var(--mm-spn-item-indent); }
+
+.mm-spn a {
+  background: inherit;
+  color: inherit;
+  text-decoration: none; }
+
+.mm-spn a:not(:last-child) {
+  width: calc(100% - 50px);
+  width: calc(100% - var(--mm-spn-item-height)); }
+
+.mm-spn a:not(:last-child):after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  border-right: 1px solid;
+  opacity: .15; }
+
+.mm-spn span {
+  background: 0 0; }
+
+.mm-spn.mm-spn--navbar {
+  cursor: pointer; }
+
+.mm-spn.mm-spn--navbar:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 25px;
+  top: calc(var(--mm-spn-item-height)/ 2);
+  left: 20px;
+  left: var(--mm-spn-item-indent);
+  width: 10px;
+  height: 10px;
+  margin-top: 2px;
+  border-top: 2px solid;
+  border-left: 2px solid;
+  -webkit-transform: rotate(-45deg) translate(50%, -50%);
+  -ms-transform: rotate(-45deg) translate(50%, -50%);
+  transform: rotate(-45deg) translate(50%, -50%);
+  opacity: .4; }
+
+.mm-spn.mm-spn--navbar.mm-spn--main {
+  cursor: default; }
+
+.mm-spn.mm-spn--navbar.mm-spn--main:before {
+  content: none;
+  display: none; }
+
+.mm-spn.mm-spn--navbar:after {
+  content: attr(data-mm-spn-title);
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  height: var(--mm-spn-item-height);
+  padding: 0 40px;
+  padding: 0 calc(var(--mm-spn-item-indent) * 2);
+  line-height: 50px;
+  line-height: var(--mm-spn-item-height);
+  opacity: .4;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis; }
+
+.mm-spn.mm-spn--navbar.mm-spn--main:after {
+  padding-left: 20px;
+  padding-left: var(--mm-spn-item-indent); }
+
+.mm-spn.mm-spn--navbar ul {
+  top: 51px;
+  top: calc(var(--mm-spn-item-height) + 1px); }
+
+.mm-spn.mm-spn--navbar ul:before {
+  content: '';
+  display: block;
+  position: fixed;
+  top: inherit;
+  z-index: 2;
+  width: 100%;
+  border-top: 1px solid currentColor;
+  opacity: .15; }
+
+.mm-spn.mm-spn--light {
+  color: #444;
+  background: #f3f3f3; }
+
+.mm-spn.mm-spn--dark {
+  color: #ddd;
+  background: #333; }
+
+.mm-spn.mm-spn--vertical {
+  overflow-y: auto; }
+
+.mm-spn.mm-spn--vertical ul {
+  width: 100%;
+  padding-right: 0;
+  position: static; }
+
+.mm-spn.mm-spn--vertical ul ul {
+  display: none;
+  padding-left: 20px;
+  padding-left: var(--mm-spn-item-indent); }
+
+.mm-spn.mm-spn--vertical ul ul:after {
+  height: 25px;
+  height: calc(var(--mm-spn-item-height)/ 2); }
+
+.mm-spn.mm-spn--vertical ul.mm-spn--open {
+  display: block; }
+
+.mm-spn.mm-spn--vertical li.mm-spn--open:before {
+  -webkit-transform: rotate(135deg) translate(-50%, 0);
+  -ms-transform: rotate(135deg) translate(-50%, 0);
+  transform: rotate(135deg) translate(-50%, 0); }
+
+.mm-spn.mm-spn--vertical ul ul li:last-child:after {
+  content: none;
+  display: none; }
+
+/*!
  * jQuery Accordion 0.0.1
  * (c) 2014 Victor Fernandez <victor@vctrfrnndz.com>
  * MIT Licensed.
@@ -453,10 +783,12 @@ button {
   max-width: 1140px; }
   @media screen and (max-width: 768px) {
     .container {
-      padding-right: 64px;
-      padding-left: 64px; } }
+      max-width: 603px;
+      padding-right: 22px;
+      padding-left: 22px; } }
   @media screen and (max-width: 600px) {
     .container {
+      max-width: 1142px;
       padding-right: 21px;
       padding-left: 21px; } }
 
@@ -499,20 +831,111 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   padding-top: 56px;
   padding-bottom: 56px; }
 
-.header__logo {
-  margin-right: 120px; }
-
 .header__nav {
-  width: 100%; }
+  -webkit-box-flex: 0.5;
+      -ms-flex-positive: 0.5;
+          flex-grow: 0.5; }
+  @media screen and (max-width: 1000px) {
+    .header__nav {
+      -webkit-box-flex: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
+      background-image: -webkit-gradient(linear, left bottom, left top, from(#36544F), to(#36544F)), -webkit-gradient(linear, left bottom, left top, from(#718753), to(#718753));
+      background-image: -o-linear-gradient(bottom, #36544F, #36544F), -o-linear-gradient(bottom, #718753, #718753);
+      background-image: linear-gradient(0deg, #36544F, #36544F), linear-gradient(0deg, #718753, #718753);
+      position: relative;
+      padding-top: 36px;
+      padding-bottom: 36px; } }
+
+.header__link {
+  font-size: 0;
+  display: none; }
+  .header__link-open__icon {
+    fill: rgba(32, 32, 32, 0.8); }
+  .header__link-close__icon {
+    fill: #D5D2D5; }
+  @media screen and (max-width: 1000px) {
+    .header__link--open {
+      display: block; }
+    .header__link--close {
+      display: block;
+      position: absolute;
+      width: 55px;
+      height: 55px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      top: 9px;
+      right: 25px; } }
+  .header__link-tel {
+    display: none;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 20px;
+    letter-spacing: 0.02em;
+    color: #000; }
+    @media screen and (max-width: 1000px) {
+      .header__link-tel {
+        display: block; } }
+
+@media screen and (max-width: 1000px) {
+  .header__logo-wrap {
+    width: 100%;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-top: 59px; } }
 
 .container--header {
-  max-width: 1656px; }
+  max-width: 1920px; }
+  @media screen and (max-width: 1440px) {
+    .container--header {
+      padding-left: 135px;
+      padding-right: 135px; } }
+  @media screen and (max-width: 1440px) {
+    .container--header {
+      max-width: 1170px;
+      padding-left: 0px;
+      padding-right: 0px; } }
+  @media screen and (max-width: 1200px) {
+    .container--header {
+      max-width: 995px; } }
+  @media screen and (max-width: 1000px) {
+    .container--header {
+      padding-left: 22px;
+      padding-right: 22px;
+      max-width: 601px;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; } }
+
+.logo {
+  display: block;
+  width: 238px;
+  height: 36px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0; }
+  @media screen and (max-width: 1440px) {
+    .logo {
+      margin-right: 50px; } }
+  @media screen and (max-width: 1000px) {
+    .logo {
+      width: 124px;
+      height: 18px;
+      margin-right: 0; } }
 
 .nav__list {
   display: -webkit-box;
@@ -522,16 +945,48 @@ button {
       -ms-flex-pack: justify;
           justify-content: space-between;
   position: relative; }
+  @media screen and (max-width: 1000px) {
+    .nav__list {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
+
+.nav__logo {
+  margin-left: 56px;
+  margin-bottom: 47px;
+  display: block;
+  width: 141px;
+  height: 21px;
+  display: none; }
+  @media screen and (max-width: 1000px) {
+    .nav__logo {
+      display: block; } }
 
 .nav__item {
   background-color: transparent;
   border-left: none; }
+  .nav__item__contacts {
+    display: none; }
+  @media screen and (max-width: 1000px) {
+    .nav__item {
+      background-color: rgba(255, 255, 255, 0.4); }
+      .nav__item__contacts {
+        display: block; }
+      .nav__item + li {
+        margin-top: 2px; } }
   .nav__item--down-active .sub-list {
     opacity: 1;
     pointer-events: auto;
     -webkit-transform: translateY(0);
         -ms-transform: translateY(0);
             transform: translateY(0); }
+  .nav__item--tel {
+    -ms-flex-negative: 0;
+        flex-shrink: 0; }
+    @media screen and (max-width: 1000px) {
+      .nav__item--tel {
+        display: none; } }
 
 .nav__link {
   display: block;
@@ -559,6 +1014,15 @@ button {
     -o-transition: 0.5s;
     transition: 0.5s;
     opacity: 0; }
+  @media screen and (max-width: 1440px) {
+    .nav__link {
+      font-size: 14px; } }
+  @media screen and (max-width: 1000px) {
+    .nav__link {
+      font-size: 20px;
+      padding-top: 10px;
+      padding-bottom: 9px;
+      padding-left: 56px; } }
   .nav__link:hover::after, .nav__link:focus::after {
     opacity: 1;
     -webkit-transform: translateY(0);
@@ -571,6 +1035,16 @@ button {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center; }
+    @media screen and (max-width: 1440px) {
+      .nav__link--down {
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start; } }
+    @media screen and (max-width: 1000px) {
+      .nav__link--down[data-control].nav__link--catalog {
+        padding-top: 10px;
+        padding-bottom: 9px;
+        padding-left: 56px; } }
     .nav__link--down:hover::after, .nav__link--down:focus::after {
       content: none; }
   .nav__link--tel {
@@ -578,7 +1052,16 @@ button {
     color: #000; }
 
 .nav__link-hamburger__icon {
-  margin-right: 12px; }
+  margin-right: 12px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  fill: #202020; }
+  @media screen and (max-width: 1440px) {
+    .nav__link-hamburger__icon {
+      margin-top: 7px; } }
+  @media screen and (max-width: 1000px) {
+    .nav__link-hamburger__icon {
+      display: none; } }
 
 [data-accordion] [data-content] {
   overflow: auto;
@@ -617,10 +1100,29 @@ button {
   -webkit-transform: translateY(-10px);
       -ms-transform: translateY(-10px);
           transform: translateY(-10px); }
+  @media screen and (max-width: 1000px) {
+    .sub-list {
+      opacity: 1;
+      padding-top: 0;
+      padding-bottom: 0;
+      position: static;
+      -webkit-transform: none;
+          -ms-transform: none;
+              transform: none;
+      width: auto;
+      max-width: none;
+      padding-left: 0;
+      padding-right: 0; } }
   .sub-list__item {
     width: 50%; }
     .sub-list__item:nth-child(even) {
       padding-left: 30px; }
+    @media screen and (max-width: 1000px) {
+      .sub-list__item {
+        width: 100%;
+        padding-left: 56px; }
+        .sub-list__item:nth-child(even) {
+          padding-left: 56px; } }
   .sub-list__link {
     letter-spacing: 0.02em;
     font-size: 16px;
@@ -630,6 +1132,10 @@ button {
     padding-bottom: 10px;
     display: inline-block;
     position: relative; }
+    @media screen and (max-width: 1000px) {
+      .sub-list__link {
+        display: block;
+        line-height: 1.8; } }
     .sub-list__link::after {
       content: "";
       position: absolute;
@@ -647,9 +1153,63 @@ button {
       opacity: 0; }
     .sub-list__link:hover::after, .sub-list__link:focus::after {
       opacity: 1; }
+    @media screen and (max-width: 1000px) {
+      .sub-list__link {
+        font-size: 20px; } }
 
-ul.slimmenu:before,
-ul.slimmenu:after {
-  content: none; }
+.mm-ocd__content {
+  width: 100%;
+  max-width: none;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#36544F), to(#36544F)), -webkit-gradient(linear, left bottom, left top, from(#718753), to(#718753));
+  background-image: -o-linear-gradient(bottom, #36544F, #36544F), -o-linear-gradient(bottom, #718753, #718753);
+  background-image: linear-gradient(0deg, #36544F, #36544F), linear-gradient(0deg, #718753, #718753);
+  overflow-y: auto; }
+
+.mm-ocd__backdrop {
+  display: none; }
+
+.record-link {
+  border: 2px solid #405A26;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 3px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 22px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 8px;
+  color: #202020; }
+  .record-link--nav {
+    font-size: 18px;
+    color: rgba(255, 255, 255, 0.8);
+    border-color: rgba(255, 255, 255, 0.8);
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 25px;
+    max-width: 303px;
+    margin-top: 68px;
+    margin-left: auto;
+    margin-right: auto;
+    display: none; }
+    @media screen and (max-width: 1000px) {
+      .record-link--nav {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; } }
+    .record-link--nav svg {
+      stroke: rgba(255, 255, 255, 0.8);
+      -webkit-transform: scale(0.9);
+          -ms-transform: scale(0.9);
+              transform: scale(0.9); }
+  .record-link__text {
+    margin-left: 20px; }
+  .record-link__icon {
+    fill: transparent;
+    stroke: #405A26; }
 
 /*# sourceMappingURL=style.css.map */
