--- a/_src/sass/blocks/header.scss
+++ b/_src/sass/blocks/header.scss
@@ -4,41 +4,155 @@
   &__inner {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding-top: 56px;
     padding-bottom: 56px;
   }
 
-  &__logo {
-    margin-right: 120px;
-  }
+
 
   &__nav {
-    width: 100%;
+    flex-grow: 0.5;
+
+    @include mw($empty) {
+      flex-grow: 1;
+      background-image: linear-gradient(0deg, #36544F, #36544F),
+        linear-gradient(0deg, #718753, #718753);
+      position: relative;
+      padding-top: 36px;
+      padding-bottom: 36px;
+    }
+  }
+
+  &__link {
+    font-size: 0;
+    display: none;
+
+    &-open__icon {
+      fill: rgba($text-dark, 0.8);
+    }
+
+    &-close__icon {
+      fill: $grey;
+    }
+
+    @include mw($empty) {
+      &--open {
+        display: block;
+      }
+
+      &--close {
+        display: block;
+        position: absolute;
+        width: 55px;
+        height: 55px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 9px;
+        right: 25px;
+      }
+    }
+
+    &-tel {
+      display: none;
+      font-weight: 300;
+      font-size: 18px;
+      line-height: 20px;
+      letter-spacing: 0.02em;
+      color: $black;
+
+      @include mw($empty) {
+        display: block;
+      }
+    }
+  }
+
+  &__logo-wrap {
+    @include mw($empty) {
+      width: 100%;
+      order: 1;
+      margin-top: 59px;
+    }
   }
 }
 
 .container {
   &--header {
-    max-width: 1656px;
+    max-width: 1920px;
+
+    @include mw($ldt) {
+      padding-left: 135px;
+      padding-right: 135px;
+    }
+
+    @include mw($ldt) {
+      max-width: 1170px;
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+
+
+    @include mw($dt) {
+      max-width: 995px;
+      // padding-left: 103px;
+      // padding-right: 103px;
+    }
+
+    @include mw($empty) {
+      padding-left: $gap-tablet;
+      padding-right: $gap-tablet;
+      max-width: $width-tablet + $gap-phone * 2;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
   }
 }
 
 .logo {
+  display: block;
+  width: 238px;
+  height: 36px;
+  flex-shrink: 0;
 
-  &__img {}
+  @include mw($ldt) {
+    margin-right: 50px;
+  }
+
+  @include mw($empty) {
+    width: 124px;
+    height: 18px;
+    margin-right: 0;
+  }
+
+
 }
 
 .nav {
-
-  // & .sub-toggle {
-  //   display: none;
-  // }
 
   &__list {
     display: flex;
     justify-content: space-between;
     position: relative;
+
+    @include mw($empty) {
+      // flex-wrap: wrap;
+      flex-direction: column;
+
+    }
+  }
+
+  &__logo {
+    margin-left: 56px;
+    margin-bottom: 47px;
+    display: block;
+    width: 141px;
+    height: 21px;
+    display: none;
+
+    @include mw($empty) {
+      display: block;
+    }
   }
 
 
@@ -46,9 +160,22 @@
     background-color: transparent;
     border-left: none;
 
-    &--down {
-      // position: relative;
+    &__contacts {
+      display: none;
     }
+
+    @include mw($empty) {
+      background-color: rgba($white, 0.4);
+
+      &__contacts {
+        display: block;
+      }
+
+      &+li {
+        margin-top: 2px;
+      }
+    }
+
 
     &--down-active {
 
@@ -58,7 +185,16 @@
         transform: translateY(0);
       }
 
-      // position: relative;
+    }
+
+
+
+    &--tel {
+      flex-shrink: 0;
+
+      @include mw($empty) {
+        display: none;
+      }
     }
   }
 
@@ -73,6 +209,7 @@
     padding: 5px 0;
     text-transform: uppercase;
     position: relative;
+
 
     &::after {
       content: "";
@@ -89,8 +226,15 @@
 
 
 
-    @include hocus() {
-      // background-color: transparent;
+    @include mw($ldt) {
+      font-size: 14px;
+    }
+
+    @include mw($empty) {
+      font-size: 20px;
+      padding-top: 10px;
+      padding-bottom: 9px;
+      padding-left: 56px;
     }
 
     @include hocus(after) {
@@ -101,6 +245,19 @@
     &--down {
       display: flex;
       align-items: center;
+
+      @include mw($ldt) {
+        align-items: flex-start;
+      }
+
+      @include mw($empty) {
+        &[data-control].nav__link--catalog {
+          padding-top: 10px;
+          padding-bottom: 9px;
+          padding-left: 56px;
+        }
+      }
+
 
       @include hocus(after) {
         content: none;
@@ -127,6 +284,16 @@
 
   &__link-hamburger__icon {
     margin-right: 12px;
+    flex-shrink: 0;
+    fill: $text-dark;
+
+    @include mw($ldt) {
+      margin-top: 7px;
+    }
+
+    @include mw($empty) {
+      display: none;
+    }
   }
 
   &__list-sub {
@@ -149,19 +316,6 @@
   padding: 5px 0;
 }
 
-// .catalog-point {
-//   width: 100%;
-
-//   &__list {
-//     display: flex !important;
-//     flex-wrap: wrap;
-//   }
-
-// }
-
-
-
-
 .sub-list {
   position: absolute;
   right: 50px;
@@ -179,6 +333,19 @@
   transform: translateY(-10px);
 
 
+  @include mw($empty) {
+    opacity: 1;
+    padding-top: 0;
+    padding-bottom: 0;
+    position: static;
+    transform: none;
+    width: auto;
+    max-width: none;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+
 
 
 
@@ -186,9 +353,22 @@
 
     width: 50%;
 
+
+
     &:nth-child(even) {
       padding-left: 30px;
     }
+
+    @include mw($empty) {
+      width: 100%;
+      padding-left: 56px;
+
+      &:nth-child(even) {
+        padding-left: 56px;
+      }
+    }
+
+
   }
 
   &__link {
@@ -200,6 +380,11 @@
     padding-bottom: 10px;
     display: inline-block;
     position: relative;
+
+    @include mw($empty) {
+      display: block;
+      line-height: 1.8;
+    }
 
     &::after {
       content: "";
@@ -217,10 +402,76 @@
     @include hocus(after) {
       opacity: 1;
     }
+
+    @include mw($empty) {
+      font-size: 20px;
+    }
   }
 }
 
-ul.slimmenu:before,
-ul.slimmenu:after {
-  content: none;
+.mm-ocd__content {
+  width: 100%;
+  max-width: none;
+  // background-color: $green;
+  background-image: linear-gradient(0deg, #36544F, #36544F),
+    linear-gradient(0deg, #718753, #718753);
+
+  overflow-y: auto;
+}
+
+
+
+.mm-ocd__backdrop {
+  display: none;
+}
+
+
+.record-link {
+  border: 2px solid $green-two;
+  box-sizing: border-box;
+  border-radius: 3px;
+  // max-width: 273px;
+  display: flex;
+  align-items: center;
+  font-size: 22px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 8px;
+  color: $text-dark;
+
+
+
+  &--nav {
+    font-size: 18px;
+    color: rgba($white, 0.8);
+    border-color: rgba($white, 0.8);
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 25px;
+    max-width: 303px;
+    margin-top: 68px;
+    margin-left: auto;
+    margin-right: auto;
+    display: none;
+
+    @include mw($empty) {
+      display: flex;
+    }
+
+
+    & svg {
+      stroke: rgba($white, 0.8);
+      transform: scale(0.9);
+
+    }
+  }
+
+  &__text {
+    margin-left: 20px;
+  }
+
+  &__icon {
+    fill: transparent;
+    stroke: $green-two;
+  }
 }
