--- a/_src/pug/modules/_header.pug
+++ b/_src/pug/modules/_header.pug
@@ -36,7 +36,7 @@ header.header#header
         li.nav__item.nav__item--tel
           a.nav__link.nav__link--tel(href="tel:+73952503504") +7 (3952) 503-504
 
-      a.header__link.header__link--close.hidden-link(href="#header-nav")
+      a.header__link.header__link--close(href="#header-nav")
         span.header__link-text Закрыть меню
         +svg(`menu-close`, 23, 23, `header__link-close`)
 
