--- a/_src/pug/helpers/mixins.pug
+++ b/_src/pug/helpers/mixins.pug
@@ -17,10 +17,19 @@ mixin img(name, type, alt, className, width, height)
   img(class=`${className}` src=`/img/${name}.${type}` alt=alt width=width height=height loading="lazy")
 
 //- +img-retina(``, ``, ``, ``, ``, ``)
-mixin img-retina(name, type, alt, className, width, height)
-  //- picture
-  //- source(srcset=`/img/webp/${name}.webp` type=`image/webp`)
-  img(class=`${className}` src=`/img/${name}.${type}` srcset=`/img/${name}.${type} 1x, /img/${name}@2x.${type} 2x` alt=alt width=width height=height loading="lazy")
+mixin img-retina(name, type, alt, className, width, height, ...args)
+  if args
+    picture
+
+      each item in args
+        source(media=`(max-width: ${item}px)` srcset=`/img/${name}-${item}.${type} 1x, /img/${name}-${item}@2x.${type} 2x`)
+
+      img(class=`${className}` src=`/img/${name}.${type}` srcset=`/img/${name}.${type} 1x, /img/${name}@2x.${type} 2x` alt=alt width=width height=height loading="lazy")
+
+
+  else
+
+    img(class=`${className}` src=`/img/${name}.${type}` srcset=`/img/${name}.${type} 1x, /img/${name}@2x.${type} 2x` alt=alt width=width height=height loading="lazy")
 
 
 //- +img-svg(``, ``, ``, ``, ``, ``)
