--- a/_src/sass/helpers/_variables.scss
+++ b/_src/sass/helpers/_variables.scss
@@ -1,11 +1,11 @@
 // colors
-$black: #000;
-$white: #fff;
+$black: #000000;
+$white: #ffffff;
 $bg: #F6F6F6;
 
 // sizes;
 $width-dt: 1100px;
-$width-tablet: 559px;
+$width-tablet: 361px;
 $width-phone: 1100px;
 $gap: 20px;
 $gap-tablet: 22px;
